# ethra

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
corpus/: README.md
corpus/civic-law/: README.md
corpus/daily-dialogues/: README.md
corpus/learner-graded/: README.md
corpus/literary-poetic/: README.md
corpus/ritual-vow/: README.md
corpus/technical-software/: README.md
crates/ethra-language/: Cargo.toml
crates/ethra-language/src/: analyze.rs  civilization.rs  compound.rs  dictionary.rs  examples.rs  lib.rs  main.rs  phonology.rs  spec.rs  validation.rs
dictionary/: README.md  a.md  b.md  c.md  d.md  e.md  f.md  g.md  h.md  i.md  index.md  j.md  k.md  l.md  m.md  n.md  o.md  p.md  r.md  s.md  t.md  u.md  v.md  w.md  x.md  y.md  z.md
docs/: corpus.md  dictionary.md  examples.md  governance.md  grammar.md  learner-grammar.md  moral-grammar.md  native-script.md  parser.md  phonology.md  relational-grammar.md  roots.md  style-checker.md  theory.md  vocabulary-scale.md  word-formation.md
scripts/: build-spec.mjs
spec/: compounds.yaml  corpus-plan.yaml  corpus.yaml  derivation-patterns.yaml  dictionary-schema.yaml  domains.yaml  examples.yaml  governance.yaml  grammar.yaml  lexicon.yaml  native-script.yaml  particles.yaml  phonology.yaml  pronouns.yaml  roadmap.yaml  roots.yaml  style.yaml  syntax.yaml
src/: derivation.rs  dictionary.rs  main.rs  proposal.rs  sentence.rs  spec.rs  style.rs  types.rs
src/analyzers/: analyze.ts  sentence.ts  style.ts
src/cli/: index.ts
tests/: civilization.test.js  ethra.test.js  ethra_rust.rs
(+10 files in other folders)
